--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,6 +32,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name=".AfegirTasca"
+            android:theme="@style/Theme.AppCompat.Dialog"/>
     </application>
 
 </manifest>
