--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,11 @@ dependencies {
     compile 'com.android.support:design:25.0.1'
     compile 'com.google.firebase:firebase-messaging:10.2.0'
     testCompile 'junit:junit:4.12'
+    compile ('io.socket:socket.io-client:0.8.3') {
+        // excluding org.json which is provided by Android
+        exclude group: 'org.json', module: 'json'
+    }
+
 
 }
 
