--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sat Mar 04 00:16:29 CET 2017
-sdk.dir=C\:\\Users\\matia\\AppData\\Local\\Android\\Sdk
+#Sat Mar 04 01:02:20 CET 2017
+sdk.dir=C\:\\Users\\aleix\\AppData\\Local\\Android\\Sdk
