--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,16 +27,10 @@ dependencies {
     compile 'com.android.support:appcompat-v7:25.2.0'
     compile 'com.android.support.constraint:constraint-layout:1.0.0-beta4'
     compile 'com.android.support:design:25.2.0'
-    compile 'com.android.support:design:25.0.1'
+    compile 'com.google.android.gms:play-services-location:10.2.0'
     compile 'com.google.firebase:firebase-messaging:10.2.0'
     testCompile 'junit:junit:4.12'
-    compile ('io.socket:socket.io-client:0.8.3') {
-        // excluding org.json which is provided by Android
-        exclude group: 'org.json', module: 'json'
-    }
 
 
 }
-
-
 apply plugin: 'com.google.gms.google-services'
