--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,9 +23,8 @@
                 <action android:name="com.google.firebase.INSTANCE_ID_EVENT"/>
             </intent-filter>
         </service>
-        <service android:name=".BackgroundLocationService">
+        <service android:name=".BackgroundLocationService"/>
 
-        </service>
         <activity
             android:name=".Main"
             android:label="@string/app_name"
