--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,7 +27,7 @@
 
         <activity
             android:name=".Main"
-            android:label="@string/app_name"
+            android:label="@string/T_main"
             android:theme="@style/AppTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -37,6 +37,10 @@
         </activity>
         <activity
             android:name=".AfegirTasca"
+            android:label="@string/T_dialog_add"
+            android:theme="@style/Theme.AppCompat.Light.Dialog.Alert"/>
+        <activity
+            android:name=".DialegNotificacio"
             android:theme="@style/Theme.AppCompat.Light.Dialog.Alert"/>
     </application>
 
