Afegir noves locs

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,6 +42,9 @@
         <activity
             android:name=".DialegNotificacio"
             android:theme="@style/Theme.AppCompat.Light.Dialog.Alert"/>
+        <activity
+            android:name=".AddPlace"
+            android:theme="@style/Theme.AppCompat.Light.Dialog.Alert"/>
     </application>
 
 </manifest>
